welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:46: error: value % is not a member of java.awt.Color
		dessiner((tab((i - 1) + num)) % (getMondeHauteur - 1));
                                              ^